<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".registerphone.RegisterPhoneFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    >

    <include layout="@layout/component_tech_pilot_header"
        android:id="@+id/tech_pilot_header"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phone_register_header"
        style="@style/BoldTextStyleBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tech_pilot_header"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="center"
        android:text="@string/home_got_sick"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phone_register_title"
        style="@style/BoldTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_register_header"
        app:layout_constraintWidth_percent="0.8"
        android:text="@string/onboarding_phone_register_title"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phone_register_description"
        style="@style/DefaultTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_register_title"
        app:layout_constraintWidth_percent="0.8"
        android:text="@string/onboarding_phone_register_description"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone_input"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/margin_l"
        app:layout_constraintTop_toBottomOf="@id/phone_register_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:paddingStart="@dimen/margin_l"
        android:paddingEnd="@dimen/margin_l"
        android:gravity="start|center_vertical"
        android:inputType="phone"
        android:digits="0123456789+"
        android:hint="+358"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/phone_register_privacy_policy_description"
        style="@style/DimTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_input"
        android:text="@string/onboarding_phone_register_side_note"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next"
        style="@style/PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:text="@string/button_next"
        android:enabled="false"
        />

    <ProgressBar
        android:id="@+id/loading_spinnner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
