<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.HomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/home_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/ketju_active"
        />

    <include layout="@layout/component_tech_pilot_header"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/home_disabled_state_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/home_disabled_action_link"
        app:layout_constraintEnd_toEndOf="@id/home_disabled_action_link"
        app:layout_constraintTop_toTopOf="@id/home_disabled_action_link"
        app:layout_constraintBottom_toBottomOf="@id/home_disabled_image"
        app:constraint_referenced_ids="home_disabled_image,home_disabled_title,home_disabled_action_link"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/home_disabled_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/gray_circle"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_disabled_title"
        style="@style/TitleTextStyle"
        android:textColor="@color/ketju_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/home_ketju_enabled_indicator_text"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/home_ketju_status_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_title"
        app:layout_constraintVertical_chainStyle="packed"
        android:src="@drawable/ic_check"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_title"
        style="@style/TitleTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_ketju_status_indicator"
        app:layout_constraintBottom_toTopOf="@id/home_description"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="center"
        android:text="@string/home_ketju_active_title"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_description"
        style="@style/DefaultTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintBottom_toTopOf="@id/vertical_center_guideline"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="center"
        android:text="@string/home_ketju_active_description"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_disabled_action_link"
        style="@style/LinkTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_description"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="center"
        tools:text="@string/home_ketju_inactive_bluetooth_link"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_exposed_link"
        style="@style/BoldTextStyle"
        android:textColor="@color/ketju_red"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_got_sick_link"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="center"
        android:text="@string/notification_exposed_title"
        android:visibility="gone"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_got_sick_link"
        style="@style/BoldTextStyle"
        android:textColor="@color/ketju_blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="center"
        android:text="@string/home_got_sick"
        />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/debug_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_build_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/margin_l"
        android:padding="@dimen/margin_l"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
